# mc_env_description

./: CMakeLists.txt  package.xml
.github/workflows/: build.yml
cmake/: Config.cmake.in  ConfigVersion.cmake.in  mc_env_description_INSTALL_PREFIX.cmake
convex/beam/: beam-ch.txt  foot1-ch.txt
convex/box_table/: box_table-ch.txt  ground-ch.txt
convex/chair/: back_support-ch.txt  chair-ch.txt  left_handle-ch.txt  leg_fl-ch.txt  leg_fr-ch.txt  leg_rl-ch.txt  leg_rr-ch.txt  right_handle-ch.txt
convex/corniche/: corniche-ch.txt  end-ch.txt  obstacle_wall_base-ch.txt  start-ch.txt  support_wall-ch.txt
convex/crapahut/: crapahut_goal-ch.txt  crapahut_left-ch.txt  crapahut_ramp-ch.txt  crapahut_right-ch.txt  crapahut_start-ch.txt
convex/crapahut_bricks/: start_left-ch.txt  start_right-ch.txt  support-ch.txt
convex/drc_terrain/: brickA5-ch.txt  brickA6-ch.txt  brickB5-ch.txt  brickB6-ch.txt  brickC5-ch.txt  brickC6-ch.txt  ground-ch.txt  wall-ch.txt  zShapeIndexedFaceSet.01-ch.txt  zShapeIndexedFaceSet.02-ch.txt  zShapeIndexedFaceSet.03-ch.txt  zShapeIndexedFaceSet.04-ch.txt  zShapeIndexedFaceSet.05-ch.txt  zShapeIndexedFaceSet.06-ch.txt  zShapeIndexedFaceSet.07-ch.txt  zShapeIndexedFaceSet.08-ch.txt  zShapeIndexedFaceSet.09-ch.txt  zShapeIndexedFaceSet.10-ch.txt  zShapeIndexedFaceSet.13-ch.txt  zShapeIndexedFaceSet.14-ch.txt  zShapeIndexedFaceSet.15-ch.txt  zShapeIndexedFaceSet.16-ch.txt  zShapeIndexedFaceSet.17-ch.txt  zShapeIndexedFaceSet.18-ch.txt  zShapeIndexedFaceSet.19-ch.txt  zShapeIndexedFaceSet.20-ch.txt  zShapeIndexedFaceSet.21-ch.txt  zShapeIndexedFaceSet.22-ch.txt  zShapeIndexedFaceSet.23-ch.txt  zShapeIndexedFaceSet.24-ch.txt  zShapeIndexedFaceSet.25-ch.txt  zShapeIndexedFaceSet.26-ch.txt  zShapeIndexedFaceSet.28-ch.txt  zShapeIndexedFaceSet.29-ch.txt  zShapeIndexedFaceSet.30-ch.txt  (+33 more)
urdf/: beam.urdf  box_table.urdf  chair.urdf  corniche.urdf  crapahut.urdf  crapahut_bricks.urdf  drc_terrain.urdf  ground.urdf  platform.urdf  table.urdf  table_printer.urdf
(+148 files in other folders)
